change job sorting to use a single parameter
