# job-service/src/main/java/com/hpe/caf/services/job/api/DatabaseHelper.java
@@ -20,7 +20,7 @@ import com.hpe.caf.services.job.api.generated.model.Failure;
 import com.hpe.caf.services.job.api.generated.model.Job;
 import com.hpe.caf.services.configuration.AppConfig;
 import com.hpe.caf.services.job.api.generated.model.JobSortField;
-import com.hpe.caf.services.job.api.generated.model.JobSortOrder;
+import com.hpe.caf.services.job.api.generated.model.SortDirection;
 import com.hpe.caf.services.job.exceptions.BadRequestException;
 import com.hpe.caf.services.job.exceptions.ForbiddenException;
 import com.hpe.caf.services.job.exceptions.NotFoundException;
@@ -60,7 +60,7 @@ public final class DatabaseHelper
     /**
      * Returns a list of job definitions in the system.
      */
-    public Job[] getJobs(final String partitionId, String jobIdStartsWith, String statusType, Integer limit, Integer offset, final JobSortField sortField, final JobSortOrder sortOrder) throws Exception {
+    public Job[] getJobs(final String partitionId, String jobIdStartsWith, String statusType, Integer limit, Integer offset, final JobSortField sortField, final SortDirection sortDirection) throws Exception {
 
         List<Job> jobs=new ArrayList<>();
 
@@ -86,7 +86,7 @@ public final class DatabaseHelper
             stmt.setInt(4, limit);
             stmt.setInt(5, offset);
             stmt.setString(6, sortField.getDbField());
-            stmt.setBoolean(7, sortOrder.getDbValue());
+            stmt.setBoolean(7, sortDirection.getDbValue());
 
             //  Execute a query to return a list of all job definitions in the system.
             LOG.debug("Calling get_jobs() database function...");
