# job-service/src/main/java/com/hpe/caf/services/job/api/JobsGet.java
@@ -19,7 +19,7 @@ import com.hpe.caf.services.configuration.AppConfigProvider;
 import com.hpe.caf.services.job.api.generated.model.Job;
 import com.hpe.caf.services.configuration.AppConfig;
 import com.hpe.caf.services.job.api.generated.model.JobSortField;
-import com.hpe.caf.services.job.api.generated.model.JobSortOrder;
+import com.hpe.caf.services.job.api.generated.model.SortDirection;
 import com.hpe.caf.services.job.exceptions.BadRequestException;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -27,6 +27,8 @@ import org.slf4j.LoggerFactory;
 public final class JobsGet {
 
     private static final Logger LOG = LoggerFactory.getLogger(JobsGet.class);
+    private static final JobSortField DEFAULT_SORT_FIELD = JobSortField.CREATE_DATE;
+    private static final SortDirection DEFAULT_SORT_DIRECTION = SortDirection.DESCENDING;
 
     /**
      * Gets a list of jobs from the job database specified by environment variable configuration.
@@ -38,7 +40,7 @@ public final class JobsGet {
      * @return  jobs        list of jobs
      * @throws Exception    bad request or database exceptions
      */
-    public static Job[] getJobs(final String partitionId, final String jobId, final String statusType, Integer limit, final Integer offset, final String sortField, final String sortOrder) throws Exception {
+    public static Job[] getJobs(final String partitionId, final String jobId, final String statusType, Integer limit, final Integer offset, final String sort) throws Exception {
 
         Job[] jobs;
 
@@ -46,20 +48,29 @@ public final class JobsGet {
             LOG.info("getJobs: Starting...");
             ApiServiceUtil.validatePartitionId(partitionId);
 
-            final JobSortField validSortField;
-            try {
-                validSortField = sortField == null ?
-                    JobSortField.DEFAULT : JobSortField.valueOf(sortField);
-            } catch (final IllegalArgumentException e) {
-                throw new BadRequestException("Invalid value for sortField.");
-            }
+            final JobSortField sortField;
+            final SortDirection sortDirection;
 
-            final JobSortOrder validSortOrder;
-            try {
-                validSortOrder = sortOrder == null ?
-                    JobSortOrder.getDefault(sortField != null) : JobSortOrder.valueOf(sortOrder);
-            } catch (final IllegalArgumentException e) {
-                throw new BadRequestException("Invalid value for sortOrder.");
+            if (sort == null) {
+                sortField = DEFAULT_SORT_FIELD;
+                sortDirection = DEFAULT_SORT_DIRECTION;
+
+            } else {
+                final String[] sortParts = sort.split(":", 2);
+                if (sortParts.length != 2) {
+                    throw new BadRequestException("Invalid format for sort: " + sort);
+                }
+                try {
+                    sortField = JobSortField.valueOf(sortParts[0]);
+                } catch (final IllegalArgumentException e) {
+                    throw new BadRequestException("Invalid value for sort field: " + sortParts[0]);
+                }
+                try {
+                    sortDirection = SortDirection.valueOf(sortParts[1]);
+                } catch (final IllegalArgumentException e) {
+                    throw new BadRequestException(
+                        "Invalid value for sort direction: " + sortParts[1]);
+                }
             }
 
 
@@ -76,7 +87,7 @@ public final class JobsGet {
                 limit = config.getDefaultPageSize();
             }
             jobs = databaseHelper.getJobs(
-                partitionId, jobId, statusType, limit, offset, validSortField, validSortOrder);
+                partitionId, jobId, statusType, limit, offset, sortField, sortDirection);
         } catch (Exception e) {
             LOG.error("Error - '{}'", e.toString());
             throw e;
