# job-service/src/main/java/com/hpe/caf/services/job/api/generated/JobsApi.java
@@ -51,11 +51,10 @@ public class JobsApi  {
             @ApiParam(value = "The maximum results to return (i.e. page size)") @QueryParam("limit") Integer limit,
             @ApiParam(value = "The starting position from which to return results (useful for paging)") @QueryParam("offset") Integer offset,
             @ApiParam(value = "An identifier that can be used to correlate events that occurred\nacross different CAF services" )@HeaderParam("CAF-Correlation-Id") String cAFCorrelationId,
-            @ApiParam(value = "The field to sort the returned results by") @QueryParam("sortField") String sortField,
-            @ApiParam(value = "The direction in which the returned results are sorted with respect to sortField. If sortField is not specified, then the default value is DESCENDING") @QueryParam("sortOrder") String sortOrder,
+            @ApiParam(value = "How to order the returned results, in the format <field>:<direction>.  Allowed values for field: JOB_ID, CREATE_DATE.  Allowed values for direction: ASCENDING, DESCENDING.") @QueryParam("sort") String sort,
             @Context SecurityContext securityContext)
             throws Exception {
-        return delegate.getJobs(partitionId, jobIdStartsWith, statusType, limit, offset, cAFCorrelationId, sortField, sortOrder, securityContext);
+        return delegate.getJobs(partitionId, jobIdStartsWith, statusType, limit, offset, cAFCorrelationId, sort, securityContext);
     }
 
     @GET
