# job-service/src/main/java/com/hpe/caf/services/job/api/generated/JobsApiService.java
@@ -24,7 +24,7 @@ import com.hpe.caf.services.job.api.generated.model.NewJob;
 @javax.annotation.Generated(value = "class io.swagger.codegen.languages.JavaJerseyServerCodegen", date = "2016-02-29T10:25:31.219Z")
 public abstract class JobsApiService {
 
-      public abstract Response getJobs(String partitionId,final String jobIdStartsWith, final String statusType, final Integer limit, final Integer offset, String cAFCorrelationId, String sortField, String sortOrder,SecurityContext securityContext)
+      public abstract Response getJobs(String partitionId,final String jobIdStartsWith, final String statusType, final Integer limit, final Integer offset, String cAFCorrelationId, String sort,SecurityContext securityContext)
               throws Exception;
 
       public abstract Response getJob(String partitionId,String jobId,String cAFCorrelationId,SecurityContext securityContext)
